feat: Integrate Tiptap rich text editor into blog functionality

--- a/package.json
+++ b/package.json
@@ -44,7 +44,16 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@react-three/drei": "^10.1.2",
     "@react-three/fiber": "^9.1.2",
+    "@tailwindcss/typography": "^0.5.19",
     "@tailwindcss/vite": "^4.1.8",
+    "@tiptap/extension-image": "^3.11.0",
+    "@tiptap/extension-link": "^3.11.0",
+    "@tiptap/extension-text-align": "^3.11.0",
+    "@tiptap/extension-underline": "^3.11.0",
+    "@tiptap/extension-youtube": "^3.11.0",
+    "@tiptap/react": "^3.11.0",
+    "@tiptap/starter-kit": "^3.11.0",
+    "@types/dompurify": "^3.2.0",
     "@types/three": "^0.177.0",
     "@zumer/snapdom": "^1.7.1",
     "axios": "^1.9.0",
@@ -54,6 +63,7 @@
     "convex": "^1.29.3",
     "crud": "link:convex-helpers/server/crud",
     "date-fns": "^4.1.0",
+    "dompurify": "^3.3.0",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.15.0",
     "hono": "^4.7.11",
